Add Autobot window

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,10 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!--Load ICON-->
+    <link rel="icon" href="/img/autobot.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/autobot.ico" type="image/x-icon" />
+
     <!--Load Mathjax-->
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script>
