--- a/_includes/head.html
+++ b/_includes/head.html
@@ -62,8 +62,17 @@
     </script>
 
     <!-- highlight the code-->
-
     <link rel="stylesheet" href="/css/default.css">
     <script src="/js/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+
+
+    <!-- Autobot Icon Window -->
+    <style>
+    #nav { width:150px; height: 150px; border: 0px; position:fixed;right:0;top:9% }
+    </style>
+    <div id="nav">
+    <img src="{{ site.baseurl }}/img/autobot.png" width="150px" height="150px">
+    </div>
+    <!-- End Autobot-->
 </head>
