--- a/_includes/head.html
+++ b/_includes/head.html
@@ -69,10 +69,10 @@
 
     <!-- Autobot Icon Window -->
     <style>
-    #nav { width:150px; height: 150px; border: 0px; position:fixed;right:0;top:9% }
+    #nav { width:150px; height: 150px; border: 0px; position:fixed;right:0;top:9%; z-index:100;}
     </style>
     <div id="nav">
-    <img src="{{ site.baseurl }}/img/autobot.png" width="150px" height="150px">
+    <img src="{{ site.baseurl }}/img/autobot.png" width="100%" height="100%">
     </div>
     <!-- End Autobot-->
 </head>
